[project]
name = "evals"
version = "0.0.0"
description = "Evaluation test scenarios for data cleanup and responsible AI edge cases"
requires-python = "==3.12.*"

dependencies = [
    "pydantic>=2.8.0",
    "ms-common-models",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.1",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "evals"
module-root = "src"

[tool.uv.sources]
ms-common-models = { workspace = true }
